[package]
name = "eye-of-reth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.11"
jsonrpsee = "0.22"
serde = "1.0.193"
tokio = { version = "1.21", default-features = false }

thiserror = "1.0.50"
eyre = "0.6.10"
anyhow = "1.0.75"
serde_json = "^1.0.114"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }

reth = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v0.2.0-beta.7" }
