[package]
name = "eye-of-reth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
jsonrpsee = { version = "0.23", features = ["server", "macros"] }
serde = "1.0.193"
tokio = { version = "1.21", default-features = false }

thiserror = "1.0.50"
eyre = "0.6.10"
anyhow = "1.0.75"
serde_json = "^1.0.114"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }

reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" }
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.0" }
